[package]
name = "rustractor"
version = "0.1.0"
authors = ["Thomas Martin <thomas@oopss.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.117"
serde_json = "1.0.59"
ureq = "1.5.1"
uuid = "0.8"

[[bin]]
name = "rustractor"
path = "src/bin/main.rs"
